[tool.poetry]
name = "spki-python"
version = "0.1.0"
description = "spki_openssl, Python research of X.509 SubjectPublicKeyInfo"
authors = ["Jason Link <jsn.link@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^43.0.1"
dnspython = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
